@@ -32,7 +32,7 @@ instead (see below for details).
 </dd>
 </dl>
 
-__DOWNLOAD_INFO__(`3.2.2', `22 July 2009', `3.1.55', `26 Mar 2009')
+__DOWNLOAD_INFO__(`3.2.2', `22 July 2009', `3.3.50', `12 Sep 2009')
 </div>
 
 <div class="section">
